fix (additions) - add padding to step-contianer on tablet mode

--- a/src/app/screens/order-tour/order-tour.component.scss
+++ b/src/app/screens/order-tour/order-tour.component.scss
@@ -50,3 +50,10 @@ div.steps-container {
   overflow: auto;
 }
 
+/* iPads (landscape) ----------- */
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
+  div.steps-container {
+    padding-left: 9%;
+  }
+}
+
